@@ -2,7 +2,6 @@
 
 package net.yura.domination.ui.swinggui;
 
-import java.awt.Dimension;
 import java.awt.Toolkit;
 import javax.swing.JFrame;
 import net.yura.domination.engine.Risk;
@@ -13,18 +12,14 @@ import net.yura.domination.engine.guishared.AboutDialog;
  * <p> Swing GUI Main Frame </p>
  * @author Yura Mamyrin
  */
-
 public class SwingGUIFrame {
 
-	/**
-	 * This runs the program
-	 * @param argv
-	 */
 	public static void main(String[] argv) {
 
 		RiskUIUtil.parseArgs(argv);
 
-		SwingGUIPanel sg = new SwingGUIPanel( new Risk() );
+                Risk r = new Risk();
+		SwingGUIPanel sg = new SwingGUIPanel( r );
 
 		JFrame gui = new JFrame();
 
@@ -41,21 +36,17 @@ public class SwingGUIFrame {
                 RiskUIUtil.center(gui);
 
 		try {
-
 			gui.setMinimumSize( gui.getPreferredSize() );
-
 		}
 		catch(NoSuchMethodError ex) {
-
 			// must me java 1.4
 			gui.setResizable(false);
-
 		}
 
 		gui.setVisible(true);
 
+                RiskUIUtil.openFile(argv,r);
+
 		sg.checkForUpdates();
-
 	}
-
 }
