@@ -18,7 +18,7 @@ TODO:
 Desktop:
 
     in statistics add a number of cards graph, so you can see the number of other peoples cards for FlashGUI and SwingGUI
-    add command line options like "Domination.jar -server" or "Domination.jar test.save"
+    add command line options like "Domination.jar -server"
     [Donate] button on main menu needs to say something else [vote/donate for next feature]
     (Flash GUI) Although the position of the game board seems to be saved, it's size is not. Nor is the position of new game, choose game [& size] (which is inevitably too small), stats, cards, battle (select attacking dice), disposition (move armies to captured country).
     make it say u can trade 3 different cards
